2009-12-31  Christian Dywan  <christian@twotoasts.de>

        Reviewed by Gustavo Noronha Silva.

        [GTK] context menu overriding API is very limited
        https://bugs.webkit.org/show_bug.cgi?id=27546

        Don't show spell checking menu items in text areas in the GTK+ port.

        * platform/ContextMenu.cpp:
        (WebCore::ContextMenu::populate):

2009-12-31  Dan Bernstein  <mitz@apple.com>

        Reviewed by Simon Fraser.

        <rdar://problem/7503279> REGRESSION (r47440): Incomplete repaint at macworldexpo.com
        https://bugs.webkit.org/show_bug.cgi?id=33067

        Test: fast/repaint/table-cell-overflow.html

        * rendering/RenderTableCell.h:
        (WebCore::RenderTableCell::hasVisibleOverflow): Added.
        * rendering/RenderTableSection.cpp:
        (WebCore::RenderTableSection::layoutRows): Set m_hasOverflowingCell if
        any cell has visible overflow, like it was before r47440.

2009-12-31  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        Do not include Frame.h under WebCore/html/canvas
        https://bugs.webkit.org/show_bug.cgi?id=33082

        No new tests, as there is no new functionality.

        * html/canvas/CanvasRenderingContext2D.cpp:

2009-12-30  Darin Fisher  <darin@chromium.org>

        Reviewed by David Levin.

        [Chromium] Delete ResourceRequest::securityInfo
        https://bugs.webkit.org/show_bug.cgi?id=26847

        * platform/network/chromium/ResourceRequest.h:

2009-12-30  Dimitri Glazkov  <dglazkov@chromium.org>

        Reviewed by Adam Barth.

        Remove unused code from V8DOMWrapper.

        * bindings/v8/V8DOMWrapper.cpp: Removed code that I added but it's no longer used.
        * bindings/v8/V8DOMWrapper.h: Ditto.

2009-12-30  Dimitri Glazkov  <dglazkov@chromium.org>

        Reviewed by Adam Barth.

        [V8] Generate configuring undetectable collection.
        https://bugs.webkit.org/show_bug.cgi?id=33063
